--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -36,7 +36,8 @@
         android:layout_marginTop="10dp"
         app:srcCompat="@drawable/waiter"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"/>
 
 
     <TextView
@@ -52,9 +53,10 @@
 
     <EditText
         android:id="@+id/editText"
-        android:layout_width="wrap_content"
+        android:layout_width="50dp"
         android:layout_height="wrap_content"
         android:inputType="number"
+        android:contentDescription="Enter number of diners."
         style="@style/WaiterText"
         app:layout_constraintTop_toBottomOf="@id/textView2"
         app:layout_constraintLeft_toLeftOf="@id/textView2" />
