--- a/app/src/main/res/layout/list_time_slot.xml
+++ b/app/src/main/res/layout/list_time_slot.xml
@@ -3,14 +3,16 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal"
-    android:layout_width="wrap_content"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
-    <TextView
+    <Button
         android:id="@+id/time_slot"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:text="time">
-    </TextView>
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:textSize="16sp">
+    </Button>
 
 </LinearLayout>
