--- a/app/src/main/res/layout-land/fragment_select_time.xml
+++ b/app/src/main/res/layout-land/fragment_select_time.xml
@@ -6,133 +6,89 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".SelectTimeFragment">
 
-    <RelativeLayout
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        app:srcCompat="@drawable/waiter"
+        android:contentDescription="@string/waiter_icon_img_description"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/time_grid"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/textView2" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/how_many_seats_text"
+        android:labelFor="@id/editText"
+        style="@style/WaiterText"
+        android:textSize="16sp"
+        android:layout_marginEnd="90dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/time_grid"
+        app:layout_constraintStart_toEndOf="@id/imageView"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+
+    <EditText
+        android:id="@+id/editText"
+        style="@style/WaiterText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:autofillHints="Num"
+        android:inputType="number"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/time_grid"
+        app:layout_constraintStart_toEndOf="@id/textView2" />
+
+    <GridLayout
+        android:id="@+id/time_grid"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Where do you want to sit?"
-            style="@style/WaiterText"
-            android:textSize="16sp"
-            android:layout_centerHorizontal="true" />
+        android:layout_height="wrap_content"
+        android:columnCount="3"
+        app:layout_constraintTop_toBottomOf="@id/imageView"
+        app:layout_constraintBottom_toTopOf="@id/time_slot_scroller"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_centerHorizontal="true"
-            app:srcCompat="@drawable/waiter" />
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="How many seats are you requesting?"
-            android:layout_below="@id/imageView"
-            style="@style/WaiterText"
-            android:textSize="16sp"
-            android:layout_marginTop="-15dp"
-            android:layout_centerHorizontal="true"/>
+        <Button
+            android:id="@+id/fri_button"
+            android:text="@string/fri_text"
+            android:layout_columnWeight="1"/>
+        <Button
+            android:id="@+id/sat_button"
+            android:text="@string/sat_text"
+            android:layout_columnWeight="1"/>
+        <Button
+            android:id="@+id/sun_button"
+            android:text="@string/sun_text"
+            android:layout_columnWeight="1"/>
+    </GridLayout>
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/time_slot_scroller"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/time_grid"
+        app:layout_constraintBottom_toTopOf="@id/submit_button"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        tools:listitem="@layout/list_time_slot" />
 
-        <EditText
-            android:id="@+id/editText"
-            style="@style/WaiterText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/textView2"
-            android:layout_alignBaseline="@id/textView2"
-            android:layout_alignEnd="@id/textView2"
-            android:layout_marginEnd="-20dp"
-            android:autofillHints="Num"
-            android:inputType="number"
-            android:paddingEnd="10dp"
-            android:paddingStart="10dp" />
+    <Button
+        android:id="@+id/submit_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:elevation="4dp"
+        android:onClick="submitButton"
+        android:text="@string/submit_text"
+        app:layout_constraintTop_toBottomOf="@id/time_slot_scroller"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
-        <GridLayout
-            android:id="@+id/time_grid"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:columnCount="3"
-            android:layout_alignTop="@id/editText"
-            android:layout_marginTop="40dp">
-
-            <Button
-                android:id="@+id/fri_button"
-                android:text="FRI"
-                android:layout_columnWeight="1"/>
-            <Button
-                android:id="@+id/sat_button"
-                android:text="SAT"
-                android:layout_columnWeight="1"/>
-            <Button
-                android:id="@+id/sun_button"
-                android:text="SUN"
-                android:layout_columnWeight="1"/>
-        </GridLayout>
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/time_slot_scroller"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:listitem="@layout/list_time_slot"
-            android:layout_marginTop="10dp"
-            android:layout_below="@id/time_grid"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
-<!--                <Button-->
-<!--                    android:id="@+id/time1"-->
-<!--                    android:text="4:00 PM"-->
-<!--                    android:layout_columnWeight="1"-->
-<!--                    android:layout_columnSpan="3"-->
-<!--                    android:layout_marginTop="10dp"/>-->
-<!--                <Button-->
-<!--                    android:id="@+id/time2"-->
-<!--                    android:text="4:30 PM"-->
-<!--                    android:layout_columnWeight="1"-->
-<!--                    android:layout_columnSpan="3"/>-->
-<!--                <Button-->
-<!--                    android:id="@+id/time3"-->
-<!--                    android:text="5:00 PM"-->
-<!--                    android:layout_columnWeight="1"-->
-<!--                    android:layout_columnSpan="3"/>-->
-<!--                <Button-->
-<!--                    android:id="@+id/time4"-->
-<!--                    android:text="5:30 PM"-->
-<!--                    android:layout_columnWeight="1"-->
-<!--                    android:layout_columnSpan="3"/>-->
-<!--                <Button-->
-<!--                    android:id="@+id/time5"-->
-<!--                    android:text="6:00 PM"-->
-<!--                    android:layout_columnWeight="1"-->
-<!--                    android:layout_columnSpan="3"/>-->
-<!--                <Button-->
-<!--                    android:id="@+id/time6"-->
-<!--                    android:text="6:30 PM"-->
-<!--                    android:layout_columnWeight="1"-->
-<!--                    android:layout_columnSpan="3"/>-->
-<!--                <Button-->
-<!--                    android:id="@+id/time7"-->
-<!--                    android:text="7:00 PM"-->
-<!--                    android:layout_columnWeight="1"-->
-<!--                    android:layout_columnSpan="3"/>-->
-<!--                <Button-->
-<!--                    android:id="@+id/time8"-->
-<!--                    android:text="7:30 PM"-->
-<!--                    android:layout_columnWeight="1"-->
-<!--                    android:layout_columnSpan="3"/>-->
-
-                <Button
-                    android:id="@+id/button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:onClick="submitButton"
-                    android:text="Submit"
-                    android:layout_columnWeight="1"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginStart="10dp"
-                    android:elevation="4dp"/>
-
-
-        </RelativeLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
